Changed at Dev Server Mainly for arogya, esp. report formats Signed-off-by: buddhika_ari <buddhika_ari@arogya.c.api-project-316008881718.internal>

--- a/src/main/webapp/admin_staff_signature.xhtml
+++ b/src/main/webapp/admin_staff_signature.xhtml
@@ -9,7 +9,7 @@
 
     <h:body>
 
-        <ui:composition template="./resources/template/template.xhtml">
+        <ui:composition template="/resources/template/template.xhtml">
 
             <ui:define name="content">
 
