--- a/src/main/webapp/inward/inward_report_bht_vice_income_by_caregories.xhtml
+++ b/src/main/webapp/inward/inward_report_bht_vice_income_by_caregories.xhtml
@@ -11,7 +11,7 @@
 
     <h:body>
 
-        <ui:composition template="./../resources/template/template.xhtml">
+        <ui:composition template="././resources/template/template.xhtml">
 
             <ui:define name="content">
                 <h:form >
