--- a/src/main/webapp/resources/patient/inputPatientDetail_1.xhtml
+++ b/src/main/webapp/resources/patient/inputPatientDetail_1.xhtml
@@ -74,14 +74,14 @@
                 </p:inputMask>
             </h:panelGroup>
         </p:panelGrid>    
-        <poue:tooltip for="txtNewPtName" value="Patient Name"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="nic" value="NIC No"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="calNewPtDob" value="Date Of Birth"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="address" value="Address"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="mno" value="Mobile Number"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="hno" value="Home Phone Number"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="txtNewSex" value="Sex"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
-        <poue:tooltip for="cmbTitle" value="Title"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
+        <p:tooltip for="txtNewPtName" value="Patient Name"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="nic" value="NIC No"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="calNewPtDob" value="Date Of Birth"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="address" value="Address"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="mno" value="Mobile Number"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="hno" value="Home Phone Number"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="txtNewSex" value="Sex"  showDelay="0" hideDelay="0"   ></p:tooltip>
+        <p:tooltip for="cmbTitle" value="Title"  showDelay="0" hideDelay="0"   ></p:tooltip>
 
 
 
