--- a/src/main/webapp/bill_payment_opd.xhtml
+++ b/src/main/webapp/bill_payment_opd.xhtml
@@ -9,7 +9,7 @@
       xmlns:pa="http://java.sun.com/jsf/composite/paymentMethod">
 
     <h:body>
-        <ui:composition template="./resources/template/template.xhtml">
+        <ui:composition template="/resources/template/template.xhtml">
 
             <ui:define name="content">
                 <h:form>
