--- a/src/main/webapp/dataAdmin/pharmacy_item_list.xhtml
+++ b/src/main/webapp/dataAdmin/pharmacy_item_list.xhtml
@@ -8,7 +8,7 @@
 
     <h:body>
 
-        <ui:composition template="./../resources/template/template.xhtml">
+        <ui:composition template="././resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
                     <p:panel header="Pharmacy Item List">
