--- a/src/main/webapp/lab/investigation_category.xhtml
+++ b/src/main/webapp/lab/investigation_category.xhtml
@@ -18,7 +18,13 @@
 
 
 
-                <p:panel header="Manage Investigation Category" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel styleClass="verticalAndHorizontalCenteringLarge">
+                    <f:facet name="header" >
+                        <p:outputLabel value="Manage Investigation Categories" ></p:outputLabel>
+                        <p:spacer height="1" width="200" ></p:spacer>
+                        <p:commandButton ajax="false" value="Back" action="/lab/administration" ></p:commandButton>
+                    </f:facet>
+                    
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
@@ -46,7 +52,10 @@
                             <h:panelGrid id="gpDetail" columns="1">
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtName" value="#{investigationCategoryController.current.name}"  ></h:inputText>
+                                    <h:outputText  value="" rendered="#{investigationCategoryController.current eq null}" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtName" 
+                                                 rendered="#{investigationCategoryController.current ne null}"
+                                                 value="#{investigationCategoryController.current.name}"  ></h:inputText>
 
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
