--- a/src/main/webapp/opd_search_bill_full_paid_bills.xhtml
+++ b/src/main/webapp/opd_search_bill_full_paid_bills.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="./resources/template/template.xhtml">
+        <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
                     <p:panel>
