Error in report search corrected Signed-off-by: Buddhika <buddhika.ari@gmail.com>

--- a/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
@@ -4,8 +4,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:pu="http://primefaces.org/ui/extensions">
+      xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
@@ -216,7 +215,7 @@
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}" ></f:setPropertyActionListener>
                                         <p:graphicImage library="image" styleClass="standedicon" name="worksheet.gif" ></p:graphicImage>
                                     </p:commandLink>
-                                    <p:commandLink id="btnNewReport" ajax="false" disabled="#{!pi.received or pi.billItem.bill.cancelled or pi.billItem.transRefund}" action="/lab_patient_report"  actionListener="#{patientReportController.createNewReport(pi)}" >
+                                    <p:commandLink id="btnNewReport" ajax="false" disabled="#{!pi.received or pi.billItem.bill.cancelled or pi.billItem.transRefund}" action="/lab/patient_report"  actionListener="#{patientReportController.createNewReport(pi)}" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                         <p:graphicImage library="image" styleClass="standedicon" name="data_entry.png" ></p:graphicImage>
                                     </p:commandLink>
@@ -313,10 +312,10 @@
                                         </h:panelGrid>
 
 
-                                        <pu:tooltip for="imgApproved" >
+                                        <p:tooltip for="imgApproved" >
                                             <h:outputLabel value="Approved" styleClass="#{dpr.approved ? 'greentext':'yellowtext'}" >
                                             </h:outputLabel>
-                                        </pu:tooltip>
+                                        </p:tooltip>
                                         <p:tooltip for="imgPrinted" >
                                             <h:outputLabel value="Printed" styleClass="#{dpr.approved ? 'greentext':'yellowtext'}" >
                                             </h:outputLabel>
