Lab Report Format Creation was made easy - Ready for alpha testing

--- a/src/main/webapp/clinical/clinical_patient_for_receptionist.xhtml
+++ b/src/main/webapp/clinical/clinical_patient_for_receptionist.xhtml
@@ -18,7 +18,7 @@
 
                     <p:defaultCommand target="btnAddToQueueAndClear" ></p:defaultCommand>
 
-                    <p:panel header="Manage Patients" styleClass="alignTop verticalAndHorizontalCenteringLarge"
+                    <p:panel header="Manage Patients" styleClass="alignTop"
                              style="height: 600px;">
                         <h:panelGrid columns="2" >
 
