--- a/src/main/webapp/lab/investigation.xhtml
+++ b/src/main/webapp/lab/investigation.xhtml
@@ -14,7 +14,7 @@
             <h:form id="form"  >
                 <p:growl autoUpdate="true" />
 
-                <p:panel styleClass="horizontalCenteringLarge" >
+                <p:panel  >
 
                     <f:facet name="header" >
                         <h:outputLabel value="Manage Investigations" styleClass="alignTop" ></h:outputLabel>
@@ -28,38 +28,55 @@
                         <p:commandButton ajax="false" value="Back" action="/lab/administration" style="float: right;"></p:commandButton>
                     </f:facet>
 
-                    <h:panelGrid id ="gpVeda" columns="3" styleClass="alignTop" >
+                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
-                        <h:panelGrid id="gpSelect" columns="1"  >
-                            <p:panel>
-                                <f:facet name="header" >
-                                    <h:outputText value="Search" ></h:outputText>
-                                    <p:commandButton id="btnAdd" ajax="false" value="Add New" action="#{investigationController.prepareAdd()}" styleClass="buttons" onclick="onSubmitButton();" style="float: right;" >
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail " execute="" >
-                                        </f:ajax>
-                                    </p:commandButton>
-                                </f:facet>
+                        <h:panelGrid columns="1" >
 
-                                <h:panelGrid id="gpSelectText" >
-                                    <p:inputText autocomplete="off" id="txtSearch" value="#{investigationController.selectText}" >
-                                        <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
-                                    </p:inputText>
+                            <h:panelGrid id="gpSelect" columns="1"  >
+                                <p:panel>
+                                    <f:facet name="header" >
+                                        <h:outputText value="Search" ></h:outputText>
+                                        <p:commandButton id="btnAdd" ajax="false" value="Add New" action="#{investigationController.prepareAdd()}" styleClass="buttons" onclick="onSubmitButton();" style="float: right;" >
+                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail " execute="" >
+                                            </f:ajax>
+                                        </p:commandButton>
+                                    </f:facet>
 
-                                    <p:selectOneListbox converter="ixcon"   id="lstSelect"   value="#{investigationController.current}" style="min-width: 223px; height: 300px;">
-                                        <f:selectItems  value="#{investigationController.institutionSelectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                        <p:ajax event="change"   update="gpDetail :#{p:component('detailPan')}" process="lstSelect" >
-                                        </p:ajax>
-                                    </p:selectOneListbox>
-                                </h:panelGrid>
+                                    <h:panelGrid id="gpSelectText" >
+                                        <p:inputText autocomplete="off" id="txtSearch" value="#{investigationController.selectText}" >
+                                            <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
+                                        </p:inputText>
 
-                                <h:panelGrid id="gpSelectButtons" columns="3"  >
+                                        <p:selectOneListbox converter="ixcon"   id="lstSelect"   
+                                                            value="#{investigationController.current}" 
+                                                            style="min-width: 223px; height: 200px;">
+                                            <f:selectItems  value="#{investigationController.institutionSelectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                            <p:ajax event="change"   update="gpDetail :#{p:component('detailPan')}" process="lstSelect" >
+                                            </p:ajax>
+                                        </p:selectOneListbox>
+                                    </h:panelGrid>
 
-                                    <p:commandButton id="btnDelete" ajax="false" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{investigationController.delete()}"  value="Delete"  >
-                                    </p:commandButton>
+                                    <h:panelGrid id="gpSelectButtons" columns="3"  >
+
+                                        <p:commandButton id="btnDelete" ajax="false" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                    return false;" action="#{investigationController.delete()}"  value="Delete"  >
+                                        </p:commandButton>
+                                    </h:panelGrid>
+                                </p:panel>
+                            </h:panelGrid>
+
+                            <p:panel header="Links" style="white-space: nowrap;" >
+                                <h:panelGrid columns="2" >
+                                    <p:commandLink ajax="false" action="#{investigationController.toEditReportFormat()}" value="Report Format - Single Item"></p:commandLink><br/>
+                                    <p:commandLink ajax="false" action="#{investigationController.toEditReportFormatMoveAll()}" value="Report Format - All Items"></p:commandLink><br/>
+                                    <p:commandLink ajax="false" action="#{investigationController.toEditReportCalculations()}" value="Calculations"></p:commandLink><br/>
+                                    <p:commandLink disabled="#{!webUserController.hasPrivilege('AdminPrices')}" ajax="false" action="#{investigationController.toEditFees()}" value="Prices"></p:commandLink><br/>
+
+
                                 </h:panelGrid>
                             </p:panel>
                         </h:panelGrid>
+
 
                         <p:panel id="detailPan" >
                             <f:facet name="header" >
@@ -94,6 +111,8 @@
                                             <p:selectOneMenu value="#{investigationController.current.reportType}" >                               
                                                 <f:selectItem itemLabel="General" itemValue="General"/>
                                                 <f:selectItem itemLabel="Microbiology" itemValue="Microbiology"/>
+                                                <f:selectItem itemLabel="Pathology / Haematology" itemValue="PathologyOrHaematology"/>
+
                                             </p:selectOneMenu>
 
                                             <h:outputText value="Invesitgation Category" ></h:outputText>
@@ -254,24 +273,7 @@
                             </h:panelGrid>
                         </p:panel>
 
-                        <p:panel header="Links" style="white-space: nowrap;" >
-                            <h:panelGrid columns="2" >
-                                <p:commandButton ajax="false" action="#{investigationController.toEditReportFormat()}" value="Manage Report Format"></p:commandButton><br/>
-                                <p:commandButton ajax="false" action="#{investigationController.toEditReportCalculations()}" value="Manage Calculations"></p:commandButton><br/>
-                                <p:commandButton disabled="#{!webUserController.hasPrivilege('AdminPrices')}" ajax="false" action="#{investigationController.toEditFees()}" value="Manage Fees"></p:commandButton><br/>
 
-
-                                <hr/>
-
-
-                                <p:commandLink ajax="false" action="#{investigationController.toEditReportFormat()}" value="Manage Single Item in Report Format"></p:commandLink><br/>
-                                <p:commandLink ajax="false" action="#{investigationController.toEditReportFormatMoveAll()}" value="Manage All in Report Format"></p:commandLink><br/>
-                                <p:commandLink ajax="false" action="#{investigationController.toEditReportCalculations()}" value="Manage Calculations"></p:commandLink><br/>
-                                <p:commandLink disabled="#{!webUserController.hasPrivilege('AdminPrices')}" ajax="false" action="#{investigationController.toEditFees()}" value="Manage Fees"></p:commandLink><br/>
-
-
-                            </h:panelGrid>
-                        </p:panel>
 
 
 
