--- a/src/main/webapp/lab/investigation_format.xhtml
+++ b/src/main/webapp/lab/investigation_format.xhtml
@@ -254,6 +254,8 @@
                                     <f:selectItem itemLabel="Flag" itemValue="Flag"/>
                                     <f:selectItem itemLabel="List" itemValue="List"/>
                                     <f:selectItem itemLabel="Dynamic Label" itemValue="DynamicLabel"/>
+                                    <f:selectItem itemLabel="Investigation" itemValue="Investigation"/>
+                                    <f:selectItem itemLabel="Template" itemValue="Template"/>
                                 </p:selectOneMenu>
                                 <div style="min-width: 20px;"></div>
                                 <h:outputText value="Value Type"/>
